<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edittext_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_website"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_web"
        android:onClick="openWebsite"/>
    <EditText
        android:id="@+id/edittext_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_location"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_location"
        android:onClick="openLocation"/>
    <EditText
        android:id="@+id/edittext_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_share"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_share"
        android:onClick="openShare"/>

</LinearLayout>